NAV-01 Main structuur

--- a/GITTaak2.html
+++ b/GITTaak2.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="GITTaak2CSS.css">
+
 </head>
 <body>
-test
+<img src="assets/riot-games-logo.svg" alt="Riot Logo">
+
+<nav class="Navigatie">
+
+<div class="NAV">Who we are </div>
+<div class="NAV">Work with us</div>
+<div class="NAV">News</div>
+</nav>
+
+
 </body>
 </html>
