--- a/GITTaak2.html
+++ b/GITTaak2.html
@@ -9,11 +9,15 @@
 <body>
 <img src="assets/riot-games-logo.svg" alt="Riot Logo">
 
+<div class="ContLinks"><img src="assets/riot-games-logo.svg" alt="Riot Logo"></div>
+<div class="ContRechts"></div>
+
 <nav class="Navigatie">
 
-<div class="NAV">Who we are </div>
-<div class="NAV">Work with us</div>
-<div class="NAV">News</div>
+<a class="NAV">Who we are </a>
+<a class="NAV">Work with us</a>
+<a class="NAV">News</a>
+
 </nav>
 
 
