--- a/GITTaak2.html
+++ b/GITTaak2.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="GITTaak2CSS.css">
-
 </head>
 <body>
-<img src="assets/riot-games-logo.svg" alt="Riot Logo">
+<header>
+    <nav>
+        <div class="links">
+            <img src="assets/riot-games-logo.svg" alt="Riot_Logo">
+        </div>
+        <div class="midden">
+            <ul>
+                <li> <a href="https://www.riotgames.com/en/who-we-are"> Who we are</a></li>
+                <li> <a href="https://www.riotgames.com/en/work-with-us"> Work with us</a></li>
+                <li> <a href="https://www.riotgames.com/en/news">News</a></li>
+            </ul>
+        </div>
+        <div class="rechts">
+            <p>Sign in</p>
+        </div>
 
-<div class="ContLinks"><img src="assets/riot-games-logo.svg" alt="Riot Logo"></div>
-<div class="ContRechts"></div>
-
-<nav class="Navigatie">
-
-<a class="NAV">Who we are </a>
-<a class="NAV">Work with us</a>
-<a class="NAV">News</a>
-
-</nav>
-
-
+    </nav>
+</header>
 </body>
 </html>
