NAV-04 Rechtse deel

--- a/GITTaak2.html
+++ b/GITTaak2.html
@@ -19,6 +19,7 @@
             </ul>
         </div>
         <div class="rechts">
+            <a href="https://authenticate.riotgames.com/?client_id=prod-xsso-riotgames&code_challenge=l88NaYnESlDCkFkYG19v0aO5b6xt-PeHAcye6Ej4Z5I&method=riot_identity&platform=web&redirect_uri=https%3A%2F%2Fauth.riotgames.com%2Fauthorize%3Fclient_id%3Dprod-xsso-riotgames%26code_challenge%3Dl88NaYnESlDCkFkYG19v0aO5b6xt-PeHAcye6Ej4Z5I%26code_challenge_method%3DS256%26redirect_uri%3Dhttps%3A%2F%2Fxsso.riotgames.com%2Fredirect%26response_type%3Dcode%26scope%3Dopenid%20account%20email%20offline_access%26state%3Dacd61c0ba41a4483cee0b62cee&security_profile=low">
             <p>Sign in</p>
         </div>
 
