HEADER-01 Video en afwerking styling

--- a/GITTaak2.html
+++ b/GITTaak2.html
@@ -20,8 +20,17 @@
         </div>
         <div class="rechts">
             <a href="https://authenticate.riotgames.com/?client_id=prod-xsso-riotgames&code_challenge=l88NaYnESlDCkFkYG19v0aO5b6xt-PeHAcye6Ej4Z5I&method=riot_identity&platform=web&redirect_uri=https%3A%2F%2Fauth.riotgames.com%2Fauthorize%3Fclient_id%3Dprod-xsso-riotgames%26code_challenge%3Dl88NaYnESlDCkFkYG19v0aO5b6xt-PeHAcye6Ej4Z5I%26code_challenge_method%3DS256%26redirect_uri%3Dhttps%3A%2F%2Fxsso.riotgames.com%2Fredirect%26response_type%3Dcode%26scope%3Dopenid%20account%20email%20offline_access%26state%3Dacd61c0ba41a4483cee0b62cee&security_profile=low">
-            <p>Sign in</p>
+                <p>Sign in</p>
             </a></div>
+
+        <video class="video" autoplay="" playsinline=""
+               poster="https://www.riotgames.com/darkroom/1920/f277926f65f932fad572f88b04d57c4b:79ca86b2c1d8302b93bf04aad5f03c71/w24-riot-homepage-back-up.jpg"
+               muted="" loop="" preload="auto">
+            <source src="https://www.riotgames.com/darkroom/original/d2224a81b271091b06d91da597aefe0d:c18d41cc833ebc0f52c48f0f927049ac/trophystraight-effect-full.mp4"
+                    type="video/mp4">
+        </video>
+
+
 
     </nav>
 </header>
